install/0000_80_machine-config_00_networkpolicy-kube-rbac-proxy-crio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-rbac-proxy-crio-deny-all
  namespace: openshift-machine-config-operator
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  podSelector:
    matchLabels:
      k8s-app: kube-rbac-proxy-crio
  policyTypes:
  - Ingress
  - Egress
